examples/bad/index_assign_immutable.mko
// Must fail: a chained slice/index write needs a mutable root binding.
fn main() {
    let values = [1, 2, 3]
    values[1:3][0] = 9
}
